--- a/lab2/css/styles.css
+++ b/lab2/css/styles.css
@@ -27,7 +27,7 @@ body {
 
 .choice{
     padding: 10px;
-    margin-top: 0 20px;
+    margin-top: 20px;
     display: inline-block;
     transition: all 0.3s ease;
 }
