some bugs fixed

--- a/lab3/css/movie.css
+++ b/lab3/css/movie.css
@@ -18,7 +18,7 @@ body{
 #main-title{
     text-align:center;    
     font-size:24pt;     
-    text-shadow: 3px 3px #999999 
+    text-shadow: 3px 3px #999999;
 }
 
 .main-content{
